Hide colspan cells on calendars. Fix day/date formatting on calendars. Fix cropped day events list

--- a/app/webroot/sass/_components/_calendars.scss
+++ b/app/webroot/sass/_components/_calendars.scss
@@ -171,7 +171,7 @@ $color-share: #FFF;
     td { 
   		/* Behave  like a "row" */
   		border: none;
-      border-bottom: 1px solid rgba(0,0,0,0.3);
+      border-bottom: 1px solid rgba(#000,0.3);
       height: auto;
       min-height: 4.5rem;
       overflow: hidden;
@@ -180,13 +180,16 @@ $color-share: #FFF;
   		white-space: normal;
       width: 100%;
       
-      &.empty {
+      &.empty,
+      &[colspan] {
         display: none;
       }
 
       .date {
+        color: rgba(#FFF,0.5);
         font-size: 2.5em;
         text-align: left;
+        line-height: 1.2;
         top: 1.75rem;
         left: 0;
         width: 1em;
@@ -194,19 +197,15 @@ $color-share: #FFF;
       
       &:before { 
         content: attr(data-day);
-        color: rgba(0,0,0,0.05);
+        color: rgba(#FFF,0.5);
         display: inline-block;
         letter-spacing: 0.2rem;
-        //margin: 0 0 0 1rem;
         text-indent: 0.25em;
         text-transform: uppercase;
       }
       
       ol {
-        position: absolute;
-        top: 0.5em;
-        right: 0.5em;
-        left: 3.7em;
+        margin: -1.5em 0 0 3.7em;
       }
       
       .event {
